--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ header{
     border-radius: 50%;
 }
 .owl-top{
-    width:100%;
+    width:300px;
     height: 50%;
+    margin-top:30px;
+    margin-left:50px;
 
 }
 .oeil-gauche, .oeil-droit {
@@ -23,10 +25,23 @@ header{
     border: 1px solid black;
     border-radius: 50%;
     display:inline-block;
+    background-color:hsl(60, 100%, 50%);
 }
 .pupille{
-    width: 50%;
-    height: 50%;
+    width: 40%;
+    height: 40%;
     border: 1px solid black;
     border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:hsl(60, 5%, 5%);
+    margin-top:15px;
+}
+.bouche{
+    width: 40%;
+    height: 40%;
+    border: 1px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
