--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header{
 .owl-top{
     width:300px;
     height: 50%;
-    margin-top:30px;
+    margin-top:50px;
     margin-left:50px;
 
 }
@@ -37,11 +37,20 @@ header{
     background-color:hsl(60, 5%, 5%);
     margin-top:15px;
 }
-.bouche{
-    width: 40%;
-    height: 40%;
+.owl-middle{
+    width: 50%;
+    height: 50%;
     border: 1px solid black;
+  margin-top:-50px;  
     margin-left: auto;
     margin-right: auto;
-    
+}
+.bouche{
+    width: 30%;
+    height: 40%;
+    border: 1px solid black;
+    border-radius: 50%;
+    margin-top:-10px;  
+    margin-left: auto;
+    margin-right: auto;
 }
